fix overflow #1

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,8 +3,12 @@
 @import 'tailwindcss/utilities';
 
 @layer base {
+  * {
+    @apply border border-red-500
+  }
+
   body {
-    @apply bg-ash-100 selection:bg-secondary selection:text-ash-100 overflow-hidden dark:bg-[#121212];
+    @apply bg-ash-100 selection:bg-secondary selection:text-ash-100 overflow-x-hidden dark:bg-[#121212];
   }
 }
 
